# models/wanbu_data_upload_record.go
@@ -5,21 +5,22 @@ import (
 	"fmt"
 	"reflect"
 	"strings"
+	"time"
 
 	"github.com/astaxie/beego/orm"
 )
 
 type WanbuDataUploadRecord struct {
-	Id         int   `orm:"column(id);auto"`
-	Userid     int   `orm:"column(userid)"`
-	Walkdays   int8  `orm:"column(walkdays)"`
-	Walksteps  int32 `orm:"column(walksteps)"`
-	Uploadtime int64 `orm:"column(uploadtime)"`
-	Timestamp  int64 `orm:"column(timestamp)"`
+	Id       int   `orm:"column(id);auto"`
+	Touserid int   `orm:"column(touserid)"`
+	Daynum   int32 `orm:"column(daynum)"`
+	Stepnum  int32 `orm:"column(stepnum)"`
+	Dateline int64 `orm:"column(dateline)"`
+	Devtype  int8  `orm:"column(devtype)"`
 }
 
 func (t *WanbuDataUploadRecord) TableName() string {
-	return "wanbu_data_upload_record"
+	return "wanbu_pm_personalupload"
 }
 
 func init() {
@@ -53,9 +54,33 @@ func GetAllWanbuDataUploadRecord(query map[string]string, fields []string, sortb
 	qs := o.QueryTable(new(WanbuDataUploadRecord))
 	// query k=v
 	for k, v := range query {
-		// rewrite dot-notation to Object__Attribute
-		k = strings.Replace(k, ".", "__", -1)
-		qs = qs.Filter(k, v)
+
+		if k == "dateline" {
+
+			//如果查找到dateline这个特殊query，查某个时间段的时间，必须符合格式，否则返回格式错误
+			ts := strings.Split(v, "-")
+			if len(ts) != 2 {
+				return nil, errors.New("query dateline 格式错误")
+			}
+			//从字符串转为时间戳，第一个参数是格式，第二个是要转换的时间字符串
+			t1, err := time.Parse("20060102", ts[0])
+			if err != nil {
+				return nil, err
+			}
+			//从字符串转为时间戳，第一个参数是格式，第二个是要转换的时间字符串
+			t2, err := time.Parse("20060102", ts[1])
+			if err != nil {
+				return nil, err
+			}
+			qs = qs.Filter("dateline__gte", t1.Unix()) // dateline >= t1
+			qs = qs.Filter("dateline__lte", t2.Unix()) // dateline <= t2
+
+		} else {
+
+			// rewrite dot-notation to Object__Attribute
+			k = strings.Replace(k, ".", "__", -1)
+			qs = qs.Filter(k, v)
+		}
 	}
 	// order by:
 	var sortFields []string
